# vmod_dgram

./: .gitignore  COPYING  Makefile.am  README.rst  build.sh  configure.ac  test.sh  vmod-dgram.spec
src/: Makefile.am  vmod_dgram.c  vmod_dgram.vcc
src/tests/: test01.vtc
